@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST blockdiag-0.6.2.tar.gz 37482 RMD160 9aad7c9578ac75d9fdb591130afb88468ca606f5 SHA1 b32121c085f347585547adfaefc8deb3543c3398 SHA256 7e1e4e2b0341d7fd18aaf73c22d4ea60d17aa965c59b9cd152ea8537d0c3f632
+DIST blockdiag-0.6.7.tar.gz 45960 RMD160 27446b4fb697a3f0aad44a48f9bff25cc3cdebe2 SHA1 bfa0176c6e57b3905a87ab237312bd3ff6c37b6e SHA256 3525bb75460af7f4a00bc3391087d2037bd1d0f3b41c8c5a3d7853b6ac519547
 EBUILD blockdiag-0.6.2.ebuild 898 RMD160 b5d963a0d97cc31b8de02c2c27a26d60b61c6878 SHA1 f7afb7713c55063612d1c142cecb566dbb00f036 SHA256 cef9e84b6d0c08225379aacfa32cc6ec2a74969a1750f016e156eaf657f414da
-MISC ChangeLog 2023 RMD160 055bca9696edd200bcea9c9203f76dcbdcc49913 SHA1 f315e81d5c286516fb063ae93bd852801c41e361 SHA256 c3e3910eaeaf6211f3582e958040f7c624001573f5b121bdfd762a9136faba4c
+EBUILD blockdiag-0.6.7.ebuild 935 RMD160 ebb2e84bd009ee20bd01b0a63171eb4573701618 SHA1 e2250620b3251ca99e3630b59e556cd073455366 SHA256 8e94fbda26bc3398d357898db1d7caea6c06cfcccc3490fc01216879f0938ac4
+MISC ChangeLog 2148 RMD160 8dbc0e171c2c6ab8771849a7c231822868e89a9c SHA1 c6ade4ca1a48cf5e08c5f990299893544e6b825a SHA256 b22dcc4831005b646a78ace1360b66b1c61f22d53337cf846574476a52ce3c58
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk1UWWwACgkQzJrj3cAXR0lxWQCeJbwkJq0MDo4JMNGGTsRAbGbf
-ukgAniyN9w2K3/6/x2v9JzUEHiZ7DfIZ
-=0NZs
+iEYEARECAAYFAk1dEZ8ACgkQzJrj3cAXR0nvKACfSrJSwWHnGZbPamMg6FiDFhbn
+RUMAnjPB/f/k7hupnm3DrhimFElEV8SL
+=0+fM
 -----END PGP SIGNATURE-----
