@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*blockdiag-0.6.7 (17 Feb 2011)
+
+  17 Feb 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.6.7.ebuild:
+  Version bump [275].
+
   10 Feb 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.5.2.ebuild,
   blockdiag-0.6.2.ebuild:
   Keyworded x86.
